2011-04-27  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt][Mac] Unreviewed. Add more failing tests to the Skipped list.

        * platform/qt-mac/Skipped:

2011-04-27  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt][Mac] Unreviewed. Add more failing tests to the Skipped list.

        * platform/qt-mac/Skipped:

2011-04-27  Adrienne Walker  <enne@google.com>

        [chromium] Unreviewed, update flat-with-transformed-child expectations.

        * platform/chromium/test_expectations.txt:

2011-04-27  Enrica Casucci  <enrica@apple.com>

        Reviewed by Darin Adler.

        REGRESSION (r84311): Copy should preserve background color if specified in the body only if the entire content is selected.
        https://bugs.webkit.org/show_bug.cgi?id=59251
        <rdar://problem/9327044>

        * editing/pasteboard/do-not-copy-body-color-expected.txt: Added.
        * editing/pasteboard/do-not-copy-body-color.html: Added.

2011-04-27  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        address aesthetic concerns for results.html format brought up at webkit meeting
        https://bugs.webkit.org/show_bug.cgi?id=59625

        -remove background-color
        -lowercase expected/actual results types to reduce overall width
        -let the test name (first column) wrap

        * fast/harness/resources/results-test.js:
        * fast/harness/results.html:

2011-04-27  Mark Pilgrim  <pilgrim@chromium.org>

        Reviewed by Tony Chang.

        Port Mozilla's IndexedDB tests: objectStoreNames
        https://bugs.webkit.org/show_bug.cgi?id=59484

        * storage/indexeddb/mozilla: Added.
        * storage/indexeddb/mozilla/global-data-expected.txt: Added.
        * storage/indexeddb/mozilla/global-data.html: Added.
        * storage/indexeddb/mozilla/objectstorenames-expected.txt: Added.
        * storage/indexeddb/mozilla/objectstorenames.html: Added.

2011-04-27  Dimitri Glazkov  <dglazkov@chromium.org>
