@@ -3967,6 +3967,3 @@ BUGDPRANKE LINUX : svg/text/text-intro-05-t.svg = IMAGE
 
 BUGDPRANKE WIN LINUX : media/video-controls-transformed.html = TEXT
 BUGDPRANKE MAC CPU : media/video-controls-transformed.html = TEXT
-
-// Needs baselines everywhere
-BUGENNE GPU : compositing/flat-with-transformed-child.html = FAIL MISSING
